--- a/ngrinder-controller/src/main/resources/messages_kr.properties
+++ b/ngrinder-controller/src/main/resources/messages_kr.properties
@@ -384,7 +384,7 @@ agent.list.version=\uBC84\uC804
 
 agent.message.common.noagent=\uC5D0\uC774\uC804\uD2B8\uAC00 \uC120\uD0DD\uB418\uC9C0 \uC54A\uC558\uC2B5\uB2C8\uB2E4.
 agent.message.cleanup.confirm=\uC5D0\uC774\uC804\uD2B8 \uBAA9\uB85D\uC744 \uC815\uB9AC\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
-agent.message.cleanup.success=\uC5D0\uC774\uC804\uD2B8 \uBAA9\uB85D\uC774 \uC815\uB9AC\uB418\uC5C8\uC2B5\uB2C8\uB2E4?
+agent.message.cleanup.success=\uC5D0\uC774\uC804\uD2B8 \uBAA9\uB85D\uC774 \uC815\uB9AC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 agent.message.cleanup.error=\uC5D0\uC774\uC804\uD2B8 \uBAA9\uB85D\uC774 \uC815\uB9AC\uB418\uC5C8\uC2B5\uB2C8\uB2E4?
 agent.message.update.confirm=\uC5D0\uC774\uC804\uD2B8\uB97C \uC5C5\uB370\uC774\uD2B8 \uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 agent.message.update.success=\uC5D0\uC774\uC804\uD2B8\uB85C \uC5C5\uB370\uC774\uD2B8 \uBA85\uB839\uC744 \uBCF4\uB0C8\uC2B5\uB2C8\uB2E4.
