Add SignUp modal

--- a/ngrinder-controller/src/main/resources/messages_cn.properties
+++ b/ngrinder-controller/src/main/resources/messages_cn.properties
@@ -23,8 +23,8 @@ common.message.validate.min=\u8bf7\u8f93\u5165\u5927\u4e8e\u7b49\u4e8e{0}\u7684\
 common.message.validate.max=\u8bf7\u8f93\u5165\u5c0f\u4e8e\u7b49\u4e8e{0}\u7684\u6570\u503c\u3002
 common.message.validate.range=\u8bf7\u8f93\u5165{0}\u5230{1}\u4e4b\u95f4\u7684\u503c\u3002
 common.message.validate.digits=\u53ea\u80fd\u8f93\u5165\u6570\u5b57\u3002
-common.message.validate.maxLength=\u8bf7\u8f93\u5165\u4e0d\u8d85\u8fc7{0}\u4e2a\u5b57\u7b26\u3002
-common.message.validate.rangeLength=\u8bf7\u8f93\u5165\u7684\u5b57\u7b26\u6570\u4ecb\u4e8e {0}\u5230{1}\u4e4b\u95f4\u3002
+common.message.validate.maxLength=\u8bf7\u8f93\u5165\u4e0d\u8d85\u8fc7{{ maxLength }}\u4e2a\u5b57\u7b26\u3002
+common.message.validate.rangeLength=\u8bf7\u8f93\u5165\u7684\u5b57\u7b26\u6570\u4ecb\u4e8e {{ minLength }}\u5230{{ maxLength }}\u4e4b\u95f4\u3002
 common.message.validate.empty=\u8be5\u9009\u9879\u4e0d\u80fd\u4e3a\u7a7a\u3002
 common.message.validate.format=\u8be5\u5185\u5bb9\u683c\u5f0f\u51fa\u9519\u3002
 common.message.validate.positiveNumber=\u8bf7\u8f93\u5165\u6b63\u6570\u3002
