--- a/ngrinder-controller/src/main/resources/messages_en.properties
+++ b/ngrinder-controller/src/main/resources/messages_en.properties
@@ -25,8 +25,8 @@ common.message.validate.min=Please enter a value greater than or equal to {0}.
 common.message.validate.max=Please enter a value smaller than or equal to {0}.
 common.message.validate.range=Please enter a value between {0} and {1}.
 common.message.validate.digits=Please enter only digits.
-common.message.validate.maxLength=Please enter characters no logger than {0}.
-common.message.validate.rangeLength=Please enter a value between {0} and {1} characters.
+common.message.validate.maxLength=Please enter characters no logger than {{ maxLength }}.
+common.message.validate.rangeLength=Please enter a value between {{ minLength }} and {{ maxLength }} characters.
 common.message.alert.save.success=The file is saved.
 common.message.alert.save.error=Error while saving the file.
 common.region=Region
