--- a/ngrinder-controller/src/main/resources/messages_kr.properties
+++ b/ngrinder-controller/src/main/resources/messages_kr.properties
@@ -25,8 +25,8 @@ common.message.validate.min={0} \uC774\uC0C1\uC758 \uAC12\uC73C\uB85C \uC785\uB8
 common.message.validate.max={0} \uC774\uD558\uC758 \uAC12\uC73C\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 common.message.validate.range=\uC785\uB825 \uAC12\uC740 {0} ~ {1} \uC0AC\uC774\uB9CC \uAC00\uB2A5\uD569\uB2C8\uB2E4.
 common.message.validate.digits=\uC22B\uC790\uB9CC \uC785\uB825\uC774 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
-common.message.validate.maxLength={0}\uC790 \uC774\uD558\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
-common.message.validate.rangeLength=\uC785\uB825 \uAC12\uC758 \uAE38\uC774\uB294 {0} ~ {1} \uC0AC\uC774\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+common.message.validate.maxLength={{ maxLength }}\uC790 \uC774\uD558\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+common.message.validate.rangeLength=\uC785\uB825 \uAC12\uC758 \uAE38\uC774\uB294 {{ minLength }} ~ {{ maxLength }} \uC0AC\uC774\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 common.message.alert.save.success=\uD30C\uC77C \uC800\uC7A5\uC774 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 common.message.alert.save.error=\uD30C\uC77C\uC744 \uC4F0\uB294 \uC911 \uC624\uB958\uAC00 \uBC1C\uC0DD\uD558\uC600\uC2B5\uB2C8\uB2E4.
 common.region=\uC9C0\uC5ED
