Add perftest detail configuration tab

--- a/ngrinder-controller/src/main/resources/messages_cn.properties
+++ b/ngrinder-controller/src/main/resources/messages_cn.properties
@@ -20,7 +20,7 @@ common.paging.previous=\u4e0a\u4e00\u9875
 
 common.message.noData=\u6ca1\u6709\u6570\u636e\u3002
 common.message.validate.min=\u8bf7\u8f93\u5165\u5927\u4e8e\u7b49\u4e8e{0}\u7684\u6570\u503c\u3002
-common.message.validate.max=\u8bf7\u8f93\u5165\u5c0f\u4e8e\u7b49\u4e8e{0}\u7684\u6570\u503c\u3002
+common.message.validate.max=\u8bf7\u8f93\u5165\u5c0f\u4e8e\u7b49\u4e8e{{ maxValue }}\u7684\u6570\u503c\u3002
 common.message.validate.range=\u8bf7\u8f93\u5165{0}\u5230{1}\u4e4b\u95f4\u7684\u503c\u3002
 common.message.validate.digits=\u53ea\u80fd\u8f93\u5165\u6570\u5b57\u3002
 common.message.validate.maxLength=\u8bf7\u8f93\u5165\u4e0d\u8d85\u8fc7{{ maxLength }}\u4e2a\u5b57\u7b26\u3002
