--- a/ngrinder-controller/src/main/resources/messages_en.properties
+++ b/ngrinder-controller/src/main/resources/messages_en.properties
@@ -22,7 +22,7 @@ common.message.validate.positiveNumber=Please enter the positive number.
 
 common.message.noData=No data to display.
 common.message.validate.min=Please enter a value greater than or equal to {0}.
-common.message.validate.max=Please enter a value smaller than or equal to {0}.
+common.message.validate.max=Please enter a value smaller than or equal to {{ maxValue }}.
 common.message.validate.range=Please enter a value between {0} and {1}.
 common.message.validate.digits=Please enter only digits.
 common.message.validate.maxLength=Please enter characters no logger than {{ maxLength }}.
