--- a/ngrinder-controller/src/main/resources/messages_kr.properties
+++ b/ngrinder-controller/src/main/resources/messages_kr.properties
@@ -22,7 +22,7 @@ common.message.validate.empty=\uBC18\uB4DC\uC2DC \uAC12\uC744 \uC785\uB825\uD574
 common.message.validate.format=\uC774 \uC635\uC158\uC758 \uD615\uC2DD\uC774 \uC798\uBABB\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 common.message.validate.positiveNumber=\uC591\uC758 \uC815\uC218\uB97C \uC785\uB825\uD574 \uC8FC\uC138\uC694.
 common.message.validate.min={0} \uC774\uC0C1\uC758 \uAC12\uC73C\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
-common.message.validate.max={0} \uC774\uD558\uC758 \uAC12\uC73C\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
+common.message.validate.max={{ maxValue }} \uC774\uD558\uC758 \uAC12\uC73C\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
 common.message.validate.range=\uC785\uB825 \uAC12\uC740 {0} ~ {1} \uC0AC\uC774\uB9CC \uAC00\uB2A5\uD569\uB2C8\uB2E4.
 common.message.validate.digits=\uC22B\uC790\uB9CC \uC785\uB825\uC774 \uAC00\uB2A5\uD569\uB2C8\uB2E4.
 common.message.validate.maxLength={{ maxLength }}\uC790 \uC774\uD558\uB85C \uC785\uB825\uD574\uC8FC\uC138\uC694.
