Implement script list and search bar

--- a/ngrinder-controller/src/main/resources/messages_en.properties
+++ b/ngrinder-controller/src/main/resources/messages_en.properties
@@ -309,7 +309,7 @@ script.info.file=File
 
 script.message.delete.alert=Please select files first.
 script.message.delete.confirm=Are you sure to delete the file(s)?
-script.message.svn=A user can access files through Subversion.&lt;br/&gt; Please access the above URL with your Subversion client.
+script.message.svn=A user can access files through Subversion.<br/> Please access the above URL with your Subversion client.
 script.message.upload.title=Upload file
 script.message.upload.content=Please select script files or resources.
 script.message.libAndResource=Check if you want to generate lib and resource folders.
