--- a/ngrinder-controller/src/main/resources/messages_cn.properties
+++ b/ngrinder-controller/src/main/resources/messages_cn.properties
@@ -305,7 +305,7 @@ script.info.file=\u6587\u4ef6
 
 script.message.delete.alert=\u8bf7\u5148\u9009\u62e9\u9700\u8981\u5220\u9664\u7684\u811a\u672c\u3002
 script.message.delete.confirm=\u786e\u5b9a\u8981\u5220\u9664\u8fd9\u4e9b\u811a\u672c\u5417\uff1f
-script.message.svn=\u7528\u6237\u53ef\u4ee5\u901a\u8fc7Subversion\u8bbf\u95ee\u811a\u672c\u3002&lt;br&gt;\u4f60\u53ef\u4ee5\u5728\u4f60\u7684Subversion\u5ba2\u6237\u7aef\u4e2d\u4f7f\u7528\u8fd9\u4e2aURL.
+script.message.svn=\u7528\u6237\u53ef\u4ee5\u901a\u8fc7Subversion\u8bbf\u95ee\u811a\u672c\u3002<br>\u4f60\u53ef\u4ee5\u5728\u4f60\u7684Subversion\u5ba2\u6237\u7aef\u4e2d\u4f7f\u7528\u8fd9\u4e2aURL.
 script.message.upload.title=\u4e0a\u4f20\u6587\u4ef6
 script.message.upload.content=\u8bf7\u9009\u62e9\u9700\u8981\u4e0a\u4f20\u7684\u811a\u672c\u6587\u4ef6\u6216\u76f8\u5173\u7684\u8d44\u6e90\u6587\u4ef6\u3002
 script.message.libAndResource=\u5982\u679c\u9700\u8981\u521b\u5efa\u5e93\u548c\u8d44\u6e90\u7684\u6587\u4ef6\u5939\uff0c\u8bf7\u9009\u4e2d\u590d\u9009\u6846\u3002
